# Planina

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md  main.c
planinacore/: CMakeLists.txt
planinacore/res/: crosshair.glslf  crosshair.glslv  main.glslv
planinacore/src/: Arguments.c  Arguments.h  Engine.h  GraphicsEngine.c  GraphicsEngine.h  Hello.c  Hello.h  InputHandler.c  InputHandler.h  Logger.c  Logger.h  ResouceManager.h  ResourceManager.c  ResourceManager.h  Types.h
planinacore/src/graphics/: Camera.c  Camera.h  Mesh.c  Mesh.h  Shader.c  Shader.h  Texture.c  Texture.h  VoxelRenderer.c  VoxelRenderer.h  Window.c  Window.h
planinacore/src/voxel/: Chunk.c  Chunk.h  Chunks.c  Chunks.h  Voxel.h
